--- a/test.ipynb
+++ b/test.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "ac4d221a",
    "metadata": {},
    "outputs": [
@@ -171,6 +171,50 @@
     "    plt.axis('off')\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8687bc7d",
+   "metadata": {},
+   "source": [
+    "# 3. Testing blur and filters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b933d872",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'imageprocessing' has no attribute 'average_blur'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m image_norm_blur \u001b[38;5;241m=\u001b[39m ip\u001b[38;5;241m.\u001b[39maverage_blur(image, ksize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m5\u001b[39m))\n\u001b[0;32m      2\u001b[0m image_gaussian_blur \u001b[38;5;241m=\u001b[39m ip\u001b[38;5;241m.\u001b[39mgaussian_blur(image, ksize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m5\u001b[39m), sigmaX\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m      3\u001b[0m image_median_blur \u001b[38;5;241m=\u001b[39m ip\u001b[38;5;241m.\u001b[39mapply_median_blur(image, ksize\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m5\u001b[39m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'imageprocessing' has no attribute 'average_blur'"
+     ]
+    }
+   ],
+   "source": [
+    "image_norm_blur = ip.average_blur(image, ksize=(5, 5))\n",
+    "image_gaussian_blur = ip.gaussian_blur(image, ksize=(5, 5), sigmaX=0)\n",
+    "image_median_blur = ip.apply_median_blur(image, ksize=5)\n",
+    "\n",
+    "# Display Results\n",
+    "image_titles = ['Original Image', 'Average Blur', 'Gaussian Blur', 'Median Blur']\n",
+    "images = [image, image_norm_blur, image_gaussian_blur, image_median_blur]\n",
+    "plt.figure(figsize=(10, 8))\n",
+    "for i in range(4):\n",
+    "    plt.subplot(2, 2, i + 1)\n",
+    "    plt.imshow(cv2.cvtColor(images[i], cv2.COLOR_BGR2RGB))\n",
+    "    plt.title(image_titles[i])\n",
+    "    plt.axis('off')\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
